--- a/cf-worker/wrangler.jsonc
+++ b/cf-worker/wrangler.jsonc
@@ -12,6 +12,11 @@
 	},
 	"workers_dev": false,
 	"preview_urls": false,
+	"send_email": [
+		{
+			"name": "EMAIL",
+		},
+	],
 	/**
 	 * Smart Placement
 	 * https://developers.cloudflare.com/workers/configuration/smart-placement/#smart-placement
