--- a/frontend/package.json
+++ b/frontend/package.json
@@ -46,6 +46,7 @@
     "vite-tsconfig-paths": "^4.2.1"
   },
   "dependencies": {
+    "@vercel/analytics": "^1.6.1",
     "appwrite": "^21.5.0",
     "random-words": "^2.0.1",
     "zod": "^4.3.5"
