--- a/frontend/package.json
+++ b/frontend/package.json
@@ -48,6 +48,7 @@
   "dependencies": {
     "@vercel/analytics": "^1.6.1",
     "appwrite": "^21.5.0",
+    "moment": "^2.30.1",
     "random-words": "^2.0.1",
     "zod": "^4.3.5"
   }
